# shut-up-device

./: Cargo.toml  README.md  original_sketch.ino  rust-toolchain.toml
avr-specs/: avr-atmega328p.json
original_sketch/: original_sketch.ino
src/: buzzer.rs  display.rs  font.rs  main.rs
