[package]
name = "shut-up-device"
version = "0.1.0"
authors = ["Alex Westerman <alex@faceftw.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "shut-up-device"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
ufmt_float = { version = "0.2", default-features = false }
nb = "1.1.0"
embedded-hal = "1.0"
unwrap-infallible = '0.1'
avr-device = "0.7"
heapless = { version = "0.8", features = ["ufmt"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3c089795cadbbc7fa83f45958128689fee7ba1e4"
features = ["arduino-nano"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
debug = false
codegen-units = 1
debug-assertions = false
strip = "symbols"


[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
